# tinyshell

./: CMakeLists.txt  Makefile  NAMING_CONVENTIONS.md  README.md  build.bat  run_tinyshell.bat  run_tinyshell.sh  test_execution_log.txt
include/: builtins.hpp  core.hpp.bak  environment.hpp  executor.hpp  expansion.hpp  globbing.hpp  job_ctl.hpp  lexer.hpp  parser_ast.hpp  shell_core.hpp  signal_event.hpp  tinyshell_globals.hpp
src/: builtins.cpp  core.cpp.bak  environment.cpp  executor.cpp  expansion.cpp  globbing.cpp  job_ctl.cpp  lexer.cpp  main.cpp  parser_ast.cpp  shell_core.cpp  signal_event.cpp
tests/: focused_project_tests.tsh  hybrid_project_tests.tsh
